Wed Jun 21 21:28:32 2006  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb (jd_to_commercial): now works fine even if in
	  mathn-ized context.

Wed Jun 21 17:32:31 2006  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* signal.c (ruby_nativethread_signal, posix_nativethread_signal, 
	  sigsend_to_ruby_thread, install_nativethread_sighandler): 
	  nativethread-support on signal handler (backport from 1.9).

	* ruby.h (HAVE_NATIVETHREAD_KILL): ditto.

	* eval.c (ruby_native_thread_kill): ditto.

Wed Jun 21 08:39:54 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/xmlrpc/create.rb (XMLRPC::Create::conv2value): merge Date
	  and Time processing.  [ruby-core:08033]

Wed Jun 21 01:40:25 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (yylex, reswords): modifier token is no longer returned in
	  fname state.  [ruby-dev:28775]

Wed Jun 21 01:12:46 2006  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb: RSS::Element.def_corresponded_attr_writer
	  supported date type.

Tue Jun 20 22:08:36 2006  Kouhei Sutou  <kou@cozmixng.org>

	* test/rss/test_parser.rb: split parser tests into ...
	* test/rss/test_parser_1.0.rb: ... RSS 1.0 parsing tests and ...
	* test/rss/test_parser_2.0.rb: ... RSS 2.0 parsing tests.

Tue Jun 20 21:19:06 2006  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb: provided default RSS::Element#children.

	* lib/rss/0.9.rb: used default RSS::Element#children.
	* lib/rss/1.0.rb: ditto.
	* lib/rss/2.0.rb: ditto.
	* lib/rss/taxonomy.rb: ditto.

Tue Jun 20 21:04:33 2006  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb: provided default RSS::Element#_tags.

	* lib/rss/0.9.rb: used default RSS::Element#_tags.
	* lib/rss/1.0.rb: ditto.
	* lib/rss/2.0.rb: ditto.
	* lib/rss/image.rb: ditto.
	* lib/rss/taxonomy.rb: ditto.

Tue Jun 20 20:47:07 2006  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb: hide RSS::Element.install_model.
	  (RSS::Element.install_have_child_element,
	   RSS::Element.install_have_children_element,